--- a/YSJViewer/LoginStoryboard.storyboard
+++ b/YSJViewer/LoginStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B3116" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="dl4-JM-FAh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="dl4-JM-FAh">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -72,10 +72,10 @@
             </objects>
             <point key="canvasLocation" x="1857" y="59"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Nav Login-->
         <scene sceneID="fg1-Vc-Wt0">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dl4-JM-FAh" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dl4-JM-FAh" customClass="NavLogin" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="7FQ-6g-1R2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
